--- a/index.html
+++ b/index.html
@@ -11,13 +11,38 @@
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto+Slab:wght@400;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/wyp4wrr.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="vendor/bootstrap-grid.css">
     <link rel="stylesheet" href="css/style.css">
     <title>golden</title>
 </head>
 
 <body>
+    <header>
+        <img src="images/background-image.png" alt="">
+        <div class="container">
+            <nav class="navbar navbar-expand-md fixed-top container navbar-dark">
+                <a href="#" class="navbar-brand">
+                    <img src="images/logo-golden.png" alt="" class="d-inline-block align-text-top logo">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mobile-menu"
+                    aria-controls="mobile-menu" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="mobile-menu">
+                    <ul class="dropdown">
+                        <li class="nav-link"><a href="#">home</a></li>
+                        <li class="nav-link"><a href="#">services</a></li>
+                        <li class="nav-link"><a href="#">portfolio</a></li>
+                        <li class="nav-link"><a href="#">about</a></li>
+                        <li class="nav-link"><a href="#">contact</a></li>
+                    </ul>
+                </div>
 
+            </nav>
+        </div>
+    </header>
 </body>
 
 </html>
