--- a/index.html
+++ b/index.html
@@ -13,36 +13,45 @@
     <link rel="stylesheet" href="https://use.typekit.net/wyp4wrr.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="vendor/bootstrap-grid.css">
     <link rel="stylesheet" href="css/style.css">
     <title>golden</title>
 </head>
 
 <body>
-    <header>
-        <img src="images/background-image.png" alt="">
-        <div class="container">
-            <nav class="navbar navbar-expand-md fixed-top container navbar-dark">
-                <a href="#" class="navbar-brand">
-                    <img src="images/logo-golden.png" alt="" class="d-inline-block align-text-top logo">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mobile-menu"
-                    aria-controls="mobile-menu" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="mobile-menu">
-                    <ul class="dropdown">
-                        <li class="nav-link"><a href="#">home</a></li>
-                        <li class="nav-link"><a href="#">services</a></li>
-                        <li class="nav-link"><a href="#">portfolio</a></li>
-                        <li class="nav-link"><a href="#">about</a></li>
-                        <li class="nav-link"><a href="#">contact</a></li>
-                    </ul>
-                </div>
+    <header class="col">
+        <img src="images/background-image.png" alt="background-image" class="background-image">
+        <nav class="container navbar navbar-expand-lg fixed-top navbar-dark bg-light>
+            <a class=" navbar-brand" href="#" alt="logo">
+            <img src="images/logo-golden.png" alt="" class="logo-image"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse pe-0" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
 
-            </nav>
-        </div>
     </header>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
