--- a/index.html
+++ b/index.html
@@ -18,36 +18,40 @@
 </head>
 
 <body>
-    <header class="col">
+    <header class="col home" id="home">
         <img src="images/background-image.png" alt="background-image" class="background-image">
-        <nav class="container navbar navbar-expand-lg fixed-top navbar-dark bg-light>
-            <a class=" navbar-brand" href="#" alt="logo">
-            <img src="images/logo-golden.png" alt="" class="logo-image"></a>
+        <nav class="container navbar navbar-expand-lg fixed-top navbar-dark bg-light py-4">
+            <a class="navbar-brand" href="#" alt="logo"><img src="images/logo-golden.png" alt="logo image"
+                    class="logo-image"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon p-3"></span>
             </button>
-            <div class="collapse navbar-collapse pe-0" id="navbarNavDropdown">
-                <ul class="navbar-nav">
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Home</a>
+                        <a class="nav-link" href="#home" alt="home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Services</a>
+                        <a class="nav-link" href="#services" alt="services">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Portfolio</a>
+                        <a class="nav-link" href="#portfolio" alt="porfolio">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="#about" alt="about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="#contact" alt="contact">Contact</a>
                     </li>
                 </ul>
             </div>
         </nav>
-
+        <div class="container h-100 d-flex flex-column justify-content-center align-content-center welcome">
+            <h2>Welcome To Our Studio!</h2>
+            <h1>It's nice to meet you</h1>
+            <button type="button" class="mx-auto btn btn-dark btn-welcome">Tell me more</button>
+        </div>
     </header>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
