--- a/index.html
+++ b/index.html
@@ -53,6 +53,42 @@
             <button type="button" class="mx-auto btn btn-dark btn-welcome">Tell me more</button>
         </div>
     </header>
+    <section class="container">
+        <div class="services">
+            <div class="services-header row align-content-center">
+                <div class="col-12">
+                    <h3 class="section-title">services</h3>
+                    <h2 class="section-subtitle">Proin iaculis purus consequat sem cure.</h2>
+                </div>
+                <div class="services-items row">
+                    <div class="card col-md-4 px-0">
+                        <div class="icon-border"><img src="images/icon-basket.png" alt="icon-basket" class="icon"></div>
+                        <div class="card-body px-0">
+                            <h4 class="card-title">E-Commerce</h4>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium,
+                                labore quas. Blanditiis earum quisquam eaque quo cupiditate.</p>
+                        </div>
+                    </div>
+                    <div class="card col-md-4 px-0">
+                        <div class="icon-border"><img src="images/icon-laptop.png" alt="icon-laptop" class="icon"></div>
+                        <div class="card-body px-0">
+                            <h4 class="card-title">Responsive Web</h4>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium,
+                                labore quas. Blanditiis earum quisquam eaque quo cupiditate.</p>
+                        </div>
+                    </div>
+                    <div class="card col-md-4 px-0">
+                        <div class="icon-border"><img src="images/icon-locked.png" alt="icon-locked" class="icon"></div>
+                        <div class="card-body px-0">
+                            <h4 class="card-title">Web Security</h4>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium,
+                                labore quas. Blanditiis earum quisquam eaque quo cupiditate.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
