Add portofio first row

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
             <button type="button" class="mx-auto btn btn-dark btn-welcome">Tell me more</button>
         </div>
     </header>
-    <section class="container">
+    <section class="container services-section">
         <div class="services">
-            <div class="services-header row align-content-center">
-                <div class="col-12">
+            <div class="row align-content-center">
+                <div class="col-12 section-header">
                     <h3 class="section-title">services</h3>
                     <h2 class="section-subtitle">Proin iaculis purus consequat sem cure.</h2>
                 </div>
@@ -83,6 +83,39 @@
                             <h4 class="card-title">Web Security</h4>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium,
                                 labore quas. Blanditiis earum quisquam eaque quo cupiditate.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="container portfolio-section">
+        <div class="portfolio">
+            <div class="row align-content-center">
+                <div class="col-12 section-header">
+                    <h3 class="section-title">our portfolio</h3>
+                    <h2 class="section-subtitle">Proin iaculis purus consequat sem cure.</h2>
+                </div>
+                <div class="portfolio-items row">
+                    <div class="card col-md-4 px-0">
+                        <div class="card-body px-0 py-0">
+                            <div class="portfolio-image"><img src="images/branding-1.png" alt="branding image"></div>
+                            <h4 class="card-title">Ebony &amp; Ivory</h4>
+                            <h2 class="card-subtitle">Branding</h2>
+                        </div>
+                    </div>
+                    <div class="card col-md-4 px-0">
+                        <div class="card-body px-0 py-0">
+                            <div class="portfolio-image"><img src="images/design-1.png" alt="Print design image"></div>
+                            <h4 class="card-title">Smart Stationary</h4>
+                            <h2 class="card-subtitle">Print Design</h2>
+                        </div>
+                    </div>
+                    <div class="card col-md-4 px-0">
+                        <div class="card-body px-0 py-0">
+                            <div class="portfolio-image"><img src="images/design-2.png" alt="Print design image"></div>
+                            <h4 class="card-title">Clever Poster</h4>
+                            <h2 class="card-subtitle">Print Design</h2>
                         </div>
                     </div>
                 </div>
