Add second row portfolio

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
             </div>
         </div>
     </section>
-    <section class="container portfolio-section">
-        <div class="portfolio">
+    <section class="portfolio-section">
+        <div class=" container portfolio">
             <div class="row align-content-center">
                 <div class="col-12 section-header">
                     <h3 class="section-title">our portfolio</h3>
@@ -116,6 +116,29 @@
                             <div class="portfolio-image"><img src="images/design-2.png" alt="Print design image"></div>
                             <h4 class="card-title">Clever Poster</h4>
                             <h2 class="card-subtitle">Print Design</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-items row">
+                    <div class="card col-md-4 px-0">
+                        <div class="card-body px-0 py-0">
+                            <div class="portfolio-image"><img src="images/product.png" alt="branding image"></div>
+                            <h4 class="card-title">Vinyl Record</h4>
+                            <h2 class="card-subtitle">Product Mock-Up</h2>
+                        </div>
+                    </div>
+                    <div class="card col-md-4 px-0">
+                        <div class="card-body px-0 py-0">
+                            <div class="portfolio-image"><img src="images/web-design.png" alt="Print design image"></div>
+                            <h4 class="card-title">Treehouse Template</h4>
+                            <h2 class="card-subtitle">Web Design</h2>
+                        </div>
+                    </div>
+                    <div class="card col-md-4 px-0">
+                        <div class="card-body px-0 py-0">
+                            <div class="portfolio-image"><img src="images/branding-2.png" alt="Print design image"></div>
+                            <h4 class="card-title">Burned Logo</h4>
+                            <h2 class="card-subtitle">Branding</h2>
                         </div>
                     </div>
                 </div>
