--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
     </header>
     <section class="container services-section">
         <div class="services">
-            <div class="row align-content-center">
+            <div class="align-content-center">
                 <div class="col-12 section-header">
                     <h3 class="section-title">services</h3>
                     <h2 class="section-subtitle">Proin iaculis purus consequat sem cure.</h2>
                 </div>
-                <div class="services-items row">
-                    <div class="card col-md-4 px-0">
+                <div class="services-items">
+                    <div class="card col-sm-12 col-md-4 px-0">
                         <div class="icon-border"><img src="images/icon-basket.png" alt="icon-basket" class="icon"></div>
                         <div class="card-body px-0">
                             <h4 class="card-title">E-Commerce</h4>
@@ -69,7 +69,7 @@
                                 labore quas. Blanditiis earum quisquam eaque quo cupiditate.</p>
                         </div>
                     </div>
-                    <div class="card col-md-4 px-0">
+                    <div class="card col-sm-12 col-md-4 px-0">
                         <div class="icon-border"><img src="images/icon-laptop.png" alt="icon-laptop" class="icon"></div>
                         <div class="card-body px-0">
                             <h4 class="card-title">Responsive Web</h4>
@@ -77,7 +77,7 @@
                                 labore quas. Blanditiis earum quisquam eaque quo cupiditate.</p>
                         </div>
                     </div>
-                    <div class="card col-md-4 px-0">
+                    <div class="card col-sm-12 col-md-4 px-0">
                         <div class="icon-border"><img src="images/icon-locked.png" alt="icon-locked" class="icon"></div>
                         <div class="card-body px-0">
                             <h4 class="card-title">Web Security</h4>
@@ -91,52 +91,53 @@
     </section>
     <section class="portfolio-section">
         <div class=" container portfolio">
-            <div class="row align-content-center">
+            <div class="align-content-center">
                 <div class="col-12 section-header">
                     <h3 class="section-title">our portfolio</h3>
                     <h2 class="section-subtitle">Proin iaculis purus consequat sem cure.</h2>
                 </div>
-                <div class="portfolio-items row">
-                    <div class="card col-md-4 px-0">
+                <div class="portfolio-items">
+                    <div class="card col-12 col-sm-2 col-md-4 px-0">
                         <div class="card-body px-0 py-0">
                             <div class="portfolio-image"><img src="images/branding-1.png" alt="branding image"></div>
                             <h4 class="card-title">Ebony &amp; Ivory</h4>
                             <h2 class="card-subtitle">Branding</h2>
                         </div>
                     </div>
-                    <div class="card col-md-4 px-0">
+                    <div class="card col-12 col-sm-2 col-md-4 px-0">
                         <div class="card-body px-0 py-0">
                             <div class="portfolio-image"><img src="images/design-1.png" alt="Print design image"></div>
                             <h4 class="card-title">Smart Stationary</h4>
                             <h2 class="card-subtitle">Print Design</h2>
                         </div>
                     </div>
-                    <div class="card col-md-4 px-0">
+                    <div class="card col-12 col-sm-2 col-md-4 px-0">
                         <div class="card-body px-0 py-0">
                             <div class="portfolio-image"><img src="images/design-2.png" alt="Print design image"></div>
                             <h4 class="card-title">Clever Poster</h4>
                             <h2 class="card-subtitle">Print Design</h2>
                         </div>
                     </div>
-                </div>
-                <div class="portfolio-items row">
-                    <div class="card col-md-4 px-0">
+
+                    <div class="card col-12 col-sm-2 col-md-4 px-0">
                         <div class="card-body px-0 py-0">
                             <div class="portfolio-image"><img src="images/product.png" alt="branding image"></div>
                             <h4 class="card-title">Vinyl Record</h4>
                             <h2 class="card-subtitle">Product Mock-Up</h2>
                         </div>
                     </div>
-                    <div class="card col-md-4 px-0">
+                    <div class="card col-12 col-sm-2 col-md-4 px-0">
                         <div class="card-body px-0 py-0">
-                            <div class="portfolio-image"><img src="images/web-design.png" alt="Print design image"></div>
+                            <div class="portfolio-image"><img src="images/web-design.png" alt="Print design image">
+                            </div>
                             <h4 class="card-title">Treehouse Template</h4>
                             <h2 class="card-subtitle">Web Design</h2>
                         </div>
                     </div>
-                    <div class="card col-md-4 px-0">
+                    <div class="card col-12 col-sm-2 col-md-4 px-0">
                         <div class="card-body px-0 py-0">
-                            <div class="portfolio-image"><img src="images/branding-2.png" alt="Print design image"></div>
+                            <div class="portfolio-image"><img src="images/branding-2.png" alt="Print design image">
+                            </div>
                             <h4 class="card-title">Burned Logo</h4>
                             <h2 class="card-subtitle">Branding</h2>
                         </div>
