--- a/index.html
+++ b/index.html
@@ -151,17 +151,31 @@
         </div>
     </section>
     <footer class="container d-flex flex-wrap justify-content-between align-items-left">
-        <div class="col-md-4 d-flex align-items-left">
+        <div class="col-md-4 d-flex align-items-center">
             <p class="footer-copyrights">© Copyright 2014 FreebiesXpress.com</p>
         </div>
-        <div class="nav col-md-4 justify-content-end list-unstyled d-flex">
-            <ul>
-                <li><a href="#" alt="Twitter icon"><i class="fa-brands fa-twitter"></i></a></li>
-                <li><a href="#" alt="Facebook icon"></a></li>
-                <li><a href="#" alt="Pintereset icon"></a></li>
-                <li><a href="#" alt="Google icon"></a></li>
+        <div class="nav col-md-4 justify-content-center list-unstyled d-flex">
+            <ul class="social-media-list">
+                <li>
+                    <div class="social-media-icon"><a href="#" alt="twitter icon" aria-label="Twitter"><i
+                                class="fa-brands fa-twitter"></i></a></div>
+                </li>
+                <li>
+                    <div class="social-media-icon"><a href="#" alt="facebook icon" aria-label="Facebook"><i
+                                class="fa-brands fa-facebook-f"></i></a>
+                    </div>
+                </li>
+                <li>
+                    <div class="social-media-icon"><a href="#" alt="pintereset icon" aria-label="Pinterest"><i
+                                class="fa-brands fa-pinterest-p"></i></a></div>
+                </li>
+                <li>
+                    <div class="social-media-icon"><a href="#" alt="google icon" aria-label="Gogole"><i
+                                class="fa-brands fa-google-plus-g"></i></a></div>
+                </li>
             </ul>
         </div>
+        <div class="col-md-4 hidden-sm-down"></div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
